--- a/html_file.html
+++ b/html_file.html
@@ -26,7 +26,7 @@
     <h1>Mass Shootings in the US in the past 50 years </h1>
     <p>Contains around 320 seprate events.</p>
     <p>The outlier which occured in October 2 2017 was also removed.</p>
-    <div id="test">
+    <div id="choropleth_map">
     </div>
 </body>
 
